# PINNFoam

./: .gitignore  README.md
applications/laplacianMatrixFoam/: laplacianMatrixFoam.C
applications/laplacianMatrixFoam/Make/: files
applications/pinnFoam_modified/: pinnFoam_modified.C
applications/pinnFoam_modified/Make/: files
improved_PINNFOAM/openfoam_cmake_demo/: CMakeLists.txt  README.md
improved_PINNFOAM/openfoam_cmake_demo/cmake/Modules/: FindOpenFOAM.cmake
improved_PINNFOAM/openfoam_cmake_demo/src/: main.C
improved_PINNFOAM/torch_gpu_smoke/: CMakeLists.txt
improved_PINNFOAM/torch_gpu_smoke/apps/: CMakeLists.txt  main.cpp
improved_PINNFOAM/torch_gpu_smoke/include/smoke/: gpu_add.hpp
improved_PINNFOAM/torch_gpu_smoke/src/: gpu_add.cpp
improved_PINNFOAM/torch_gpu_smoke/tests/: CMakeLists.txt  gpu_add_test.cpp
improved_PINNFOAM/torch_openfoam_combo/: CMakeLists.txt  README.md
improved_PINNFOAM/torch_openfoam_combo/apps/: CMakeLists.txt
improved_PINNFOAM/torch_openfoam_combo/apps/of_app/: CMakeLists.txt  main.C
improved_PINNFOAM/torch_openfoam_combo/cmake/Modules/: FindOpenFOAM.cmake
improved_PINNFOAM/torch_openfoam_combo/include/smoke/: gpu_add.hpp
improved_PINNFOAM/torch_openfoam_combo/src/: CMakeLists.txt  gpu_add.cpp
improved_PINNFOAM/torch_openfoam_combo/tests/: CMakeLists.txt  test_01_torch_gpu.cpp  test_02_openfoam_cmake.cpp  test_03_integration_torch_openfoam.cpp
run/heatTranferProblem/: Allclean  Allrun.pre
run/heatTranferProblem/0/: T
run/heatTranferProblem/constant/: physicalProperties
run/heatTranferProblem/system/: blockMeshDict  controlDict  fvSchemes  fvSolution
